<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addExpenseToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/prime_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/edtxtExType"
        android:layout_width="280sp"
        android:layout_height="60sp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ex_type_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtExTime" />

    <EditText
        android:id="@+id/edtxtExAmount"
        android:layout_width="280sp"
        android:layout_height="60sp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ex_amount_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        android:translationY="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addExpenseToolbar" />

    <EditText
        android:id="@+id/edtxtExTime"
        android:layout_width="280sp"
        android:layout_height="60sp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:focusable="false"
        android:gravity="center"
        android:hint="@string/ex_time_hint"
        android:importantForAutofill="no"
        android:inputType="time"
        android:translationY="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtExAmount" />

    <EditText
        android:id="@+id/edtxtExComments"
        android:layout_width="280sp"
        android:layout_height="100sp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ex_comments_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:maxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtExType" />

    <Button
        android:id="@+id/btnInsertExpense"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/add_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerIconSelection"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/select_icon"
        android:hint="@string/select_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtExComments" />


</androidx.constraintlayout.widget.ConstraintLayout>