<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/expenseOptionToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/prime_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenseOptionToolbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbleditType"
                android:layout_width="130sp"
                android:layout_height="50sp"
                android:paddingStart="5sp"
                android:paddingTop="5sp"
                android:paddingEnd="5sp"
                android:text="@string/ex_type" />

            <TextView
                android:id="@+id/tveditType"
                android:layout_width="200sp"
                android:layout_height="50sp"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto_light"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="174dp"
                tools:layout_editor_absoluteY="84dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbleditAmount"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:paddingStart="5sp"
                android:paddingTop="5sp"
                android:paddingEnd="5sp"
                android:text="@string/ex_amount" />

            <TextView
                android:id="@+id/tveditAmount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"

                android:fontFamily="@font/roboto_light"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="188dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbleditTime"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:paddingStart="5sp"
                android:paddingTop="5sp"
                android:paddingEnd="5sp"
                android:text="@string/ex_time" />

            <TextView
                android:id="@+id/tveditTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto_light"

                android:textSize="18sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="147dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="60sp">

            <TextView
                android:id="@+id/lbleditComments"
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:paddingStart="5sp"
                android:paddingTop="5sp"
                android:paddingEnd="5sp"
                android:text="@string/ex_comments" />

            <TextView
                android:id="@+id/tveditComments"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fontFamily="@font/roboto_light"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="242dp" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnEditExpense"
        android:layout_width="120dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:text="@string/edit_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/btnDeleteExpense"
        android:layout_width="120sp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:text="@string/delete_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.13" />

</androidx.constraintlayout.widget.ConstraintLayout>